--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "CLIMA"
+uuid = "777c4786-024f-11e9-21a3-85d5d4106250"
+authors = ["Climate Modeling Alliance"]
+version = "0.1.0"
+
 [deps]
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
