--- a/src/Planet-parameters/Project.toml
+++ b/src/Planet-parameters/Project.toml
@@ -1,2 +1,6 @@
 name = "PlanetParameters"
 uuid = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+
+[deps]
+ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
