--- a/Project.toml
+++ b/Project.toml
@@ -7,4 +7,5 @@ version = "0.1.0"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
