--- a/src/CLIMA-atmos/Dycore/env/gpu/Project.toml
+++ b/src/CLIMA-atmos/Dycore/env/gpu/Project.toml
@@ -4,5 +4,5 @@ CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
 CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
-ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+Parameters = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
