--- a/src/CLIMA-atmos/Dycore/Project.toml
+++ b/src/CLIMA-atmos/Dycore/Project.toml
@@ -5,7 +5,7 @@ uuid = "1c620338-02f4-11e9-26ab-abe1dcdd7c6d"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
-Parameters = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
