--- a/src/PlanetParameters/Project.toml
+++ b/src/PlanetParameters/Project.toml
@@ -2,4 +2,4 @@ name = "PlanetParameters"
 uuid = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 
 [deps]
-Parameters = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
