--- a/src/Utilities/Project.toml
+++ b/src/Utilities/Project.toml
@@ -2,7 +2,7 @@ name = "Utilities"
 uuid = "d528e2a8-1396-11e9-0475-bb99f588b544"
 
 [deps]
-Parameters = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 
 [extras]
