--- a/src/Utilities/Project.toml
+++ b/src/Utilities/Project.toml
@@ -4,6 +4,7 @@ uuid = "d528e2a8-1396-11e9-0475-bb99f588b544"
 [deps]
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
