--- a/src/Utilities/Project.toml
+++ b/src/Utilities/Project.toml
@@ -2,6 +2,7 @@ name = "Utilities"
 uuid = "d528e2a8-1396-11e9-0475-bb99f588b544"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
