--- a/Project.toml
+++ b/Project.toml
@@ -10,5 +10,6 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+SurfaceFluxes = "7169bd00-2eee-11e9-22a5-2b2073a21580"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Utilities = "d528e2a8-1396-11e9-0475-bb99f588b544"
