Use the Pkg infrastructure to run tests
Now that we have our code in packages we can use the `Pkg`
infrastructure to run our tests.  This simplifies the code to run the
tests and brings it in line with the Julia community standard approach
to testing.

--- a/src/ParametersType/Project.toml
+++ b/src/ParametersType/Project.toml
@@ -1,2 +1,8 @@
 name = "ParametersType"
 uuid = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
