--- a/src/ClimaAtmos/Dycore/Project.toml
+++ b/src/ClimaAtmos/Dycore/Project.toml
@@ -11,3 +11,9 @@ PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
