--- a/src/ClimaAtmos/Dycore/Project.toml
+++ b/src/ClimaAtmos/Dycore/Project.toml
@@ -10,6 +10,7 @@ ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+Utilities = "d528e2a8-1396-11e9-0475-bb99f588b544"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [extras]
