--- a/src/ClimaAtmos/Dycore/env/gpu/Project.toml
+++ b/src/ClimaAtmos/Dycore/env/gpu/Project.toml
@@ -8,3 +8,4 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+Utilities = "d528e2a8-1396-11e9-0475-bb99f588b544"
