--- a/src/Utilities/env/gpu/Project.toml
+++ b/src/Utilities/env/gpu/Project.toml
@@ -1,4 +1,9 @@
 [deps]
+CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
+CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
+Cassette = "7057c7e9-c182-5462-911a-8362d720325c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
