--- a/src/ClimaAtmos/Dycore/Project.toml
+++ b/src/ClimaAtmos/Dycore/Project.toml
@@ -3,6 +3,8 @@ uuid = "1c620338-02f4-11e9-26ab-abe1dcdd7c6d"
 
 [deps]
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
