--- a/src/ClimaAtmos/Parameterizations/TurbulenceConvection/Project.toml
+++ b/src/ClimaAtmos/Parameterizations/TurbulenceConvection/Project.toml
@@ -1,3 +1,11 @@
+name = "TurbulenceConvection"
+uuid = "061c16f4-4750-11e9-2fdd-11f49ecbb51b"
+authors = ["Charles Kawczynski <kawczynski.charles@gmail.com>"]
+version = "0.1.0"
+
 [deps]
+DirTrees = "371f0974-2003-11e9-1f11-91cc2e5941a7"
+Grids = "cf49d1e4-3bb4-11e9-1091-81a41800ccf3"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+StateVecs = "15fa1bb0-4747-11e9-181d-f5e39f85efc6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
