--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   matrix:
     - julia_version: 1.0
-    - julia_version: latest
+    - julia_version: 1.1
 
 platform:
   - x64 # 64-bit
