--- a/env/gpu/Project.toml
+++ b/env/gpu/Project.toml
@@ -1,10 +1,9 @@
 [deps]
-CLIMAAtmosDycore = "1c620338-02f4-11e9-26ab-abe1dcdd7c6d"
+CLIMA = "777c4786-024f-11e9-21a3-85d5d4106250"
 CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
 CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
+CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
-ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
-PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
