total energy moist-thermo

--- a/src/ClimaAtmos/Dycore/Project.toml
+++ b/src/ClimaAtmos/Dycore/Project.toml
@@ -10,6 +10,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 ParametersType = "046d00ba-03b1-11e9-3cca-b5213a01defd"
 PlanetParameters = "50a4fe1a-031f-11e9-2493-0505e0da639e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Utilities = "d528e2a8-1396-11e9-0475-bb99f588b544"
