--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ deps/deps.jl
 docs/build/
 docs/site/
 src/**/Manifest.toml
-src/**/*.vtk
-src/**/*.vtu
-src/**/*.swp
-src/**/*.png
+*.vtk
+*.vtu
+*.swp
+*.png
+!docs/src/assets/*.png
