--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,3 +3,6 @@ CLIMA = "777c4786-024f-11e9-21a3-85d5d4106250"
 Canary = "f104530e-ab06-11e8-1c1e-6d6e4a5d5c91"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
