--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ cpu:test:dev:
   extends: .cputest
   variables:
     CI_VERSION_TAG: 'dev'
+  allow_failure: true
 
 gpu:test:v1.1:
   extends: .gputest
