--- a/bors.toml
+++ b/bors.toml
@@ -1,4 +1,8 @@
 status = [
   "ci/gitlab/%",
+  "continuous-integration/travis-ci/push",
+  "continuous-integration/appveyor/branch",
   "ci/slurmci"
 ]
+
+timeout_sec = 14400
