--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,28 +29,28 @@ include:
     CI_IMAGE_TAG:     'plain'
     CI_JULIA_PROJECT: '.'
 
-gpu:test:dev:
-  extends: .gputest
-  variables:
-    CI_VERSION_TAG: 'dev'
-  allow_failure: true
-
-cpu:test:dev:
-  extends: .cputest
-  variables:
-    CI_VERSION_TAG: 'dev'
-  allow_failure: true
-
-gpu:test:v1.1:
-  extends: .gputest
-  variables:
-    CI_VERSION_TAG: 'v1.1'
-
-cpu:test:v1.1:
-  extends: .cputest
-  variables:
-    CI_VERSION_TAG: 'v1.1'
-
+# gpu:test:dev:
+#   extends: .gputest
+#   variables:
+#     CI_VERSION_TAG: 'dev'
+#   allow_failure: true
+# 
+# cpu:test:dev:
+#   extends: .cputest
+#   variables:
+#     CI_VERSION_TAG: 'dev'
+#   allow_failure: true
+# 
+# gpu:test:v1.1:
+#   extends: .gputest
+#   variables:
+#     CI_VERSION_TAG: 'v1.1'
+# 
+# cpu:test:v1.1:
+#   extends: .cputest
+#   variables:
+#     CI_VERSION_TAG: 'v1.1'
+# 
 # documentation:
 #   extends: .documentation
 #   dependencies:
