Add dictionary to ReadConfigurationFile.jl

--- a/src/InputOutput/UserInput/configuration.ini
+++ b/src/InputOutput/UserInput/configuration.ini
@@ -4,13 +4,22 @@
 precision = double
 
 #DOMAIN PROPERTIES
-nsd, 3
+nsd =  3
 geometry = cube
 
-Npoly    = 5
-Δx       = 31.0
-Δy       = 35.0
-Δz       = 10.0
+npoly    = 5
+
+Δx       = 101
+Δy       = 102
+Δz       = 103
+
+xmin     = 1
+xmax     = 25600
+ymin     = 2
+ymax     = 100
+zmin     = 3
+zmax     = 6400
+
 
 #TIME ADVANCEMENT
 tfinal          = 14000.0
@@ -27,8 +36,7 @@ right  = no-flux
 top    = sponge
 bottom = heat-flux
 
-sponge = on
-sponge_type = sin4
+
 
 #PRESET PROBLEM NAME
 problem = dycoms
