fix azure docs criteria

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,10 +139,10 @@ jobs:
       set -o xtrace
       export TRAVIS_REPO_SLUG="$BUILD_REPOSITORY_NAME"
       export TRAVIS_PULL_REQUEST="${SYSTEM_PULLREQUEST_PULLREQUESTNUMBER:-false}"
-      if [[ $BUILD_SOURCEBRANCH == /refs/tags/* ]]; then
+      if [[ $BUILD_SOURCEBRANCH == refs/tags/* ]]; then
         export TRAVIS_TAG="${BUILD_SOURCEBRANCH:11}"
       fi
-      if [[ $BUILD_SOURCEBRANCH == /refs/heads/* ]]; then
+      if [[ $BUILD_SOURCEBRANCH == refs/heads/* ]]; then
         export TRAVIS_BRANCH="${BUILD_SOURCEBRANCH:12}"
       fi
       ./julia-$(JULIA_VERSION)/bin/julia -e 'using InteractiveUtils; versioninfo()'
