--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,8 @@ trigger:
 jobs:
 - job: Linux
 
+  timeoutInMinutes: 0
+
   pool:
     vmImage: 'ubuntu-16.04'
 
@@ -55,6 +57,8 @@ jobs:
 
 - job: macOS
 
+  timeoutInMinutes: 0
+
   pool:
     vmImage: 'macOS-10.14'
 
@@ -86,6 +90,8 @@ jobs:
 
 
 - job: Windows
+
+  timeoutInMinutes: 0
 
   pool:
     vmImage: 'VS2017-Win2016'
