--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,25 +35,22 @@ jobs:
       set -o xtrace
       ./julia-$(JULIA_VERSION)/bin/julia -e 'using InteractiveUtils; versioninfo()'
       ./julia-$(JULIA_VERSION)/bin/julia --project=@. -e 'using Pkg; Pkg.instantiate()'
-      ./julia-$(JULIA_VERSION)/bin/julia --project=@. -e 'using Pkg; Pkg.test()'
+      ./julia-$(JULIA_VERSION)/bin/julia --project=@. -e 'using Pkg; Pkg.test(coverage=true)'
     displayName: 'Run the tests'
   - bash: |
-      set -o xtrace
-      export TRAVIS_REPO_SLUG="$BUILD_REPOSITORY_NAME"
-      export TRAVIS_PULL_REQUEST="${SYSTEM_PULLREQUEST_PULLREQUESTNUMBER:-false}"
-      if [[ $BUILD_SOURCEBRANCH == /refs/tags/* ]]; then
-        export TRAVIS_TAG="${BUILD_SOURCEBRANCH:11}"
-      fi
-      if [[ $BUILD_SOURCEBRANCH == /refs/heads/* ]]; then
-        export TRAVIS_BRANCH="${BUILD_SOURCEBRANCH:12}"
-      fi
-      ./julia-$(JULIA_VERSION)/bin/julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
-                                                                        Pkg.develop(PackageSpec(path=pwd()));
-                                                                        Pkg.build()'
-      ./julia-$(JULIA_VERSION)/bin/julia --project=docs/ docs/make.jl
+      ./julia-$(JULIA_VERSION)/bin/julia --project=.coverage -e 'using Pkg; Pkg.instantiate();
+                                                                 Pkg.add("Coverage");
+                                                                 using Coverage;
+                                                                 Codecov.submit_local(Codecov.process_folder();
+                                                                   service = "azure_pipelines",
+                                                                   commit       = @show(ENV["BUILD_SOURCEVERSION"]),
+                                                                   pull_request = @show(get(ENV, "SYSTEM_PULLREQUEST_PULLREQUESTNUMBER", "false")),
+                                                                   job          = @show(ENV["BUILD_DEFINITIONNAME"]),
+                                                                   slug         = @show(ENV["BUILD_REPOSITORY_NAME"]),
+                                                                   build        = @show(ENV["BUILD_BUILDID"]))'
     env:
-      DOCUMENTER_KEY: $(documenter_key)
-    displayName: 'Deploy the docs'
+      CODECOV_TOKEN: "d5ad49b6-c247-44f7-a529-5f749a8b0c2a"
+    displayName: 'Submit code coverage' 
 
 - job: macOS
 
