Disable failing integration test
pseudo1D_advection_diffusion.jl is currently failing. This was previously hidden by #523, but now that is fixed tests are broken.

--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -36,6 +36,6 @@ cpu_gpu = [
 ]
 
 gpu = [
-  { file = "test/DGmethods/advection_diffusion/pseudo1D_advection_diffusion.jl", n = 3, args = ["true"] },
+  { file = "test/DGmethods/advection_diffusion/pseudo1D_advection_diffusion.jl", n = 3, args = [] },
 ]
 
