--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -39,7 +39,7 @@ cpu_gpu = [
 ]
 
 gpu = [
-  { file = "test/DGmethods/advection_diffusion/pseudo1D_advection_diffusion.jl", n = 3, args = [] },
+  { file = "test/DGmethods/advection_diffusion/pseudo1D_advection_diffusion.jl", n = 3, args = ["true"] },
   # this test times out; re-enable after fixing
   #{ file = "test/DGmethods/compressible_Navier_Stokes/rayleigh-benard_model.jl", n = 3, args = [] },
   { file = "examples/Atmos/heldsuarez.jl", n = 3, args = [] },
