Geostrophic forcing: using cross product construction

--- a/env/gpu/Project.toml
+++ b/env/gpu/Project.toml
@@ -8,6 +8,7 @@ Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 GPUifyLoops = "ba82f77b-6841-5d2e-bd9f-4daf811aec27"
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
