modified:   examples/Atmos/dycoms.jl modified:   slurmci-perf.toml modified:   slurmci-test.toml modified:   src/Atmos/Model/AtmosModel.jl modified:   src/Atmos/Model/radiation.jl modified:   test/DGmethods/compressible_Navier_Stokes/rayleigh-benard_model.jl

--- a/slurmci-perf.toml
+++ b/slurmci-perf.toml
@@ -5,7 +5,7 @@
 cpu = []
 
 cpu_gpu = [
-    { file = "examples/DGmethods/ex_001_dycoms.jl", n = 4, args = []},
+    { file = "examples/Atmos/dycoms.jl", n = 4, args = []},
 ]
 
 gpu = []
