--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -39,6 +39,7 @@ cpu_gpu = [
   { file = "test/LinearSolvers/columnwiselu.jl", slurmargs = ["--ntasks=1"], args = []},
   { file = "test/LinearSolvers/bandedsystem.jl", slurmargs = ["--ntasks=3", "--time=02:00:00"], args = [] },
   { file = "examples/DGmethods/ex_001_dycoms.jl", slurmargs = ["--ntasks=4"], args = [] },
+  { file = "examples/DGmethods/ex_001_dycoms-imex.jl", slurmargs = ["--ntasks=4"], args = [] },
   { file = "test/Ocean/shallow_water/GyreDriver.jl", slurmargs = ["--ntasks=1"], args = [] },
 ]
 
