--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -23,7 +23,7 @@ cpu_gpu = [
   { file = "test/DGmethods/compressible_Navier_Stokes/rising_bubble-model.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/compressible_Navier_Stokes/rising_bubble-model-imex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/compressible_Navier_Stokes/density_current-model.jl", slurmargs = ["--ntasks=3"], args = [] },
-  { file = "test/DGmethods/cfl.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "test/DGmethods/courant.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods_old/Euler/RTB_IMEX.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods_old/Euler/isentropic_vortex_standalone.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods_old/Euler/isentropic_vortex_standalone_IMEX.jl", slurmargs = ["--ntasks=3"], args = [] },
