--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ jobs:
 
   strategy:
     matrix:
-      Julia 1.2:
+      Julia_1.2:
         JULIA_VERSION: '1.2'
-      Julia 1.3:
+      Julia_1.3:
         JULIA_VERSION: '1.3'
 
   steps:
