--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -50,6 +50,5 @@ gpu = [
   { file = "examples/Atmos/heldsuarez.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/Ocean/Hydrostatic_Boussinesq/test_divergence_free.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "experiments/GCM/heldsuarez.jl", slurmargs = ["--ntasks=3"], args = [] },
-  # currently freezing
-  #{ file = "experiments/LES/dycoms.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "experiments/LES/dycoms.jl", slurmargs = ["--ntasks=3"], args = [] },
 ]
