--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CUDAapi = "3895d2a7-ec45-59b8-82bb-cfc6a382f9b3"
 CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
+CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
+
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
