First attempt at Dycoms

--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CUDAapi = "3895d2a7-ec45-59b8-82bb-cfc6a382f9b3"
 CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
 CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
-
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
@@ -21,6 +20,7 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+FreeParameters = "c2bd907f-6643-4f95-bba2-6fb2889bb36c"
 GPUifyLoops = "ba82f77b-6841-5d2e-bd9f-4daf811aec27"
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
