Make MPIStateArray Vars aware
Co-authored-by: blallen <ballen@mit.edu>
Co-authored-by: Jean-Michel Campin <jmc@mit.edu>
Co-authored-by: leios <jrs.schloss@gmail.com>

--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -11,6 +11,7 @@ cpu = [
 ]
 
 cpu_gpu = [
+  { file = "test/Arrays/varsindex.jl", slurmargs = ["--ntasks=1"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex_imex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/Euler/isentropicvortex_multirate.jl", slurmargs = ["--ntasks=3"], args = [] },
